--- a/docs/5.2_git.md
+++ b/docs/5.2_git.md
@@ -96,9 +96,9 @@ $ ls -a
 
 **由 git 管理的文件**
 
-After you create a repository at github and clone it locally, you can create all sorts of files under the directory managed by git, but git ignores them until you `add` them. The `add` command is basically notifying the repository that it should care about that file.  You can have whatever other files you want laying around. Git will simply ignore them unless you `add` them.
+在 github 上创建存储库并在本地克隆它之后，你可以在 git 管理的目录下创建各种文件，但是 git 忽略它们直到你“添加”它们。 `add`命令基本上通知存储库它应该关心该文件。 你可以放置你想要的任何其他文件。 除非你“添加”它们，否则 Git 会忽略它们。
 
-Download [images-starterkit.ipynb](https://github.com/parrt/msan501/blob/master/projects/images-starterkit.ipynb) from github to your images-YOURID directory and call it `images.ipynb`. The cool kids do download and rename without the browser in one command:
+从 github 下载[`images-starterkit.ipynb`](https://github.com/parrt/msan501/blob/master/projects/images-starterkit.ipynb)到您的`images-YOURID`目录，并将其命名为`images.ipynb`。 大牛在一个命令中下载和重命名，不需要浏览器：
 
 ```bash
 $ curl -o images.ipynb https://github.com/parrt/msan501/raw/master/projects/images-starterkit.ipynb
@@ -109,12 +109,11 @@ $ ls
 images.ipynb
 ```
 
-If `curl` isn't installed, use `brew` to install it.
+如果没有安装`curl`，请使用`brew`进行安装。
 
+**制作快照（提交）**
 
-**Taking a snapshot (committing)**
-
-We have a file in the directory but git has no idea it should track it. We have to explicitly add it to revision control:
+我们在目录中有一个文件，但是 git 不知道它应该跟踪它。 我们必须明确地将它添加到版本控制：
 
 ```bash
 $ git add images.ipynb
@@ -130,7 +129,7 @@ Changes to be committed:
 ...
 ```
 
-At this point, we would be free to add more files or change that file. When we want to make a snapshot, we commit our changes:
+此时，我们可以自由添加更多文件或更改该文件。 当我们想制作快照时，我们提交更改：
 
 ```bash
 $ git commit -a -m 'initial add'
@@ -139,13 +138,13 @@ $ git commit -a -m 'initial add'
  create mode 100644 images.ipynb
 ```
 
-The `-m` is the option that indicates a commit message follows on the command line.  You can safely ignore what `-a` means, but make sure you always have it on your commit commands.
+`-m`是在命令行后面指定提交消息的选项。 您可以放心地忽略`-a`的含义，但请确保始终在提交命令中使用它。
 
-Until the commit, the file changes are in a so-called staging area. It's kind of like putting everything in a box (add) and then mailing the box (committing).
+在提交之前，文件更改位于所谓的暂存区域中。 这有点像把所有东西放在一个盒子里（添加），然后邮寄盒子（提交）。
 
-**Pushing back to github**
+**推回到 github**
 
-Every time you do a commit, you're making a snapshot of the current state of your files. Git tracks the set of changes per commit and a commit message, which we can retrieve easily:
+每次执行提交时，都会创建文件当前状态的快照。 Git 跟踪每次提交的更改集和提交消息，我们可以轻松检索：
 
 ```bash
 $ git log
@@ -156,7 +155,9 @@ Date:   Fri Jun 30 12:50:42 2017 -0700
     initial add
 ```
 
-<img src="img/redbang.png" width=30 align="left">Until you explicitly push back to github, github has no idea that you made changes on your local disk to a repository. Git knows where the original repository came from but it does not automatically push anything to github upon commit. Commit is for the local repository, push is for syncing with a remote repository.  The remote repository is called the *origin*. Use the following command to ask git what it thinks the origin is:
+<img src="img/redbang.png" width=30 align="left">
+
+在您明确推回到 github 之前，github 不知道您在本地磁盘上对存储库进行了更改。 Git 知道原始存储库的来源，但它不会在提交时自动将任何内容推送到 github。 Commit 用于本地存储库，push 用于与远程存储库同步。远程存储库称为*来源（origin）*。 使用以下命令询问 git 它认为来源是什么：
 
 ```
 $ git remote -v
@@ -164,7 +165,7 @@ origin	https://github.com/USF-MSAN501/images-parrt.git (fetch)
 origin	https://github.com/USF-MSAN501/images-parrt.git (push)
 ```
 
-Ok, let's push our changes (we added a file) back to github:
+好吧，让我们将我们的更改（我们添加一个文件）推回给 github：
 
 ```bash
 $ git push origin master
@@ -177,35 +178,35 @@ To github.com:USF-MSAN501/images-parrt.git
  * [new branch]      master -> master
 ```
 
-There is a lot going on in that message, but if there are no errors, you're good to go. The *master* is what we call a branch and you will always be working in the master branch.
+该消息中有很多内容，但如果没有错误，那么你很高兴。 *master*就是我们所说的分支，你将始终在`master`分支中工作。
 
-Until you get very comfortable with git and github, you should always verify that your pushes succeed by examining the remote repository at github. Refresh your version of the `https://github.com/USF-MSAN501/images-parrt` URL and it should show file `images.ipynb` (and any others you've pushed). Once you've downloaded, unzipped, `add`ed the [image project images zip](https://github.com/parrt/msan501/blob/master/projects/images-expected-output.zip?raw=true), and pushed back to github, your github page should look like:
+在你对 git 和 github 非常熟悉之前，你应该总是检查 github 上的远程存储库来验证你的推送是否成功。 刷新你的`https://github.com/USF-MSAN501/images-parrt` URL 的版本，它应该显示文件`images.ipynb`（以及你推送的任何其他文件）。 一旦下载，解压缩，“添加”[图像项目 zip](https://github.com/parrt/msan501/blob/master/projects/images-expected-output.zip?raw=true)，并推回到 github，您的 github 页面应如下所示：
 
 <img src="../projects/figures/github-initial-add.png" width="600">
 
-Make sure that all of the files that you want to submit for your projects get properly committed locally and then pushed back to github!
+确保您要为项目提交的所有文件都在本地正确提交，然后再推回到 github！
  
-**Making changes**
+**做出更改**
 
-You can make changes and lock them in with another commit. (Make sure use the `-a` option on the `git commit`.)
+您可以进行更改并使用其他提交将其锁定。（确保在`git commit`上使用`-a`选项。）
 
 ```bash
 ...change existing file images.ipynb from jupyter lab...
 $ git commit -a -m 'what I did to images notebook'
 ```
 
-**Deleting files**
+**删除文件**
 
-Deleting a file tracked by git is also considered a change but you can also explicitly use `git rm` *filename*, which is what I do.
+删除由 git 跟踪的文件也被视为更改，但您也可以显式使用`git rm`*文件名*，这就是我所做的。
 
 ```bash
 $ git rm foo.py
 $ git commit -a -m 'I do not need foo anymore'
 ```
 
-**Checking differences with repo**
+**检查仓库的差异**
 
-If you make a change and want to know how it's different from the current repository version, just use diff:
+如果您进行了更改并想知道它与当前存储库版本的不同之处，请使用`diff`：
 
 ```bash
 $ ... tweak images.ipynb ...
@@ -213,20 +214,19 @@ $ git diff images.ipynb # kinda sucks with notebooks
 ...
 ```
 
-**Reverting**
+**还原**
 
-If you screw up and want to toss out **everything** since the last commit, do a hard reset (make sure you use the `--hard` option):
+如果你搞砸了并且想丢弃自上次提交以来**所有东西**，请进行硬重置（确保使用`--hard`选项）：
 
 ```bash
 $ ... tweak whatever you want ...
 $ git reset --hard HEAD
 ```
 
-This throws out all changes since the last commit. If all you want to do is revert uncommitted changes to a single file, you can run this:
+这会丢弃自上次提交以来的所有更改。 如果您只想将未提交的更改还原为单个文件，则可以运行以下命令：
 
 ```bash
 $ git checkout -- filename
 ```
 
-I think they call that funny dash-dash option "sparse mode." (whatever. yuck.)
-
+我认为他们把这种有趣的破折号选项称为“稀疏模式”。（怎么叫都随便。）
