--- a/docs/5.3_aws.md
+++ b/docs/5.3_aws.md
@@ -1,57 +1,57 @@
-# Launching a Virtual Machine at Amazon Web Services
+# 在 Amazon Web Services 上启动虚拟机
 
-The goal of this lecture-lab is to teach you to create a Linux machine at *Amazon Web Services*, login and copy some data to that machine.
+本实验的目的是教您在 *Amazon Web Services* 上创建 Linux 机器，登录并将一些数据复制到该机器。
 
+以下是我为 MSAN692 制作的视频，其中显示了[如何启动 AWS 实例并启动基于 Python 的 Web 服务器](https://www.youtube.com/watch?v=qQncEJL6NHs&t=2s)。
 
-Here is a video I made for MSAN692 showing [how to launch an AWS instance and start a Python-based web server](https://www.youtube.com/watch?v=qQncEJL6NHs&t=2s).
+##  讨论
 
-##  Discussion
-
-Login to AWS and go to your [AWS console](http://aws.amazon.com/console) and click on the "EC2" link.
+登录 AWS 并转到[ AWS 控制台](http://aws.amazon.com/console)并单击“EC2”链接。
 
 <img src=img/console_snippet.png width=200>
 
-Click "Launch Instance", which will start the process to create a virtual machine in the cloud. An instance is just a virtual machine.
+单击“启动实例”，这将启动过程，在云中创建虚拟机。 实例只是一个虚拟机。
 
 <img src=img/launch.png width=400>
 
-Select the "Amazon Linux 2 AMI" entry, which should be the first one.  This is a commonly-used "image" that results in a Linux machine that contains lots of useful goodies as you can see from that list, such as Python and MySQL. An image is just a snapshot of the disk after someone carefully installs software properly on a Linux machine. This means we don't have to install software every time we create a new machine.
+选择“Amazon Linux 2 AMI”条目，该条目应该是第一个。 这是一个常用的“映像”，它使得 Linux 机器包含许多有用的东西，从该列表中可以看到，例如 Python 和 MySQL。 在有人在 Linux 机器上正确安装软件之后，映像只是磁盘的快照。 这意味着我们不必在每次创建新机器时都安装软件。
 
 <img src=img/ami.png width=600>
 
-Select instance type "t2.micro," which should be the first machine type listed. This machine is very low powered but is sufficient for playing around. Click "Review and launch"
+选择实例类型`t2.micro`，它应该是列出的第一个机器类型。 这台机器功率非常低，但足以让你玩玩。 点击“查看并启动”。
 
 <img src=img/selectvm.png width=600>
 
-This will bring up a screen describing the details about the instance we are launching. Ignore all of it for now and just click "Review and Launch" at the bottom right. That brings up a summary page that we could examine if we wanted, but just click "Launch" in bottom right.
+这将打开一个屏幕，描述我们正在启动的实例的详细信息。 暂时忽略所有这些，只需点击右下方的“查看并启动”即可。 这会打开一个摘要页面，我们可以根据需要进行检查，但只需点击右下角的“启动”即可。
 
-This will bring a dialog box up to select a key pair. A key pair is what allows you to securely access the server and prevent unauthorized access. The *first time*, you will need to create a new key pair. Name it as your user ID then click on "Download key pair."  It will download a *userid*.pem file, which are your security credentials for getting into the machine. Save that file in a safe spot. If you lose it you will not be able to get into the machine that you create. From now on, you can reuse that pre-existing key.
+这将打开一个对话框来选择密钥对。 密钥对允许您安全地访问服务器并防止未经授权的访问。 *第一次*，您需要创建一个新的密钥对。 将其命名为您的用户 ID，然后单击“下载密钥对”。 它将下载`userid.pem`文件，这是您进入机器的安全凭据。将该文件保存在安全位置。如果丢失了，您将无法进入您创建的机器。 从现在开始，您可以重用该预先存在的密钥。
 
 <img src=img/keypair.png width=600>
 
-After downloading, click "Launch instances." You should see something like:
+下载后，单击“启动实例”。 你应该看到类似的东西：
 
 <img src=img/launched.png width=600>
 
-Click on the `i-...` link to go to the EC2 console showing your instance.
+单击`i-...`链接转到显示实例的 EC2 控制台。
 
 <img src=img/ec2-instance.png width=600>
 
-Click on your instance and you should see a description box at the bottom. Look for the "Public IP" address, which is 54.196.174.210 in this case:
+单击您的实例，您应该会在底部看到一个描述框。 查找“公共IP”地址，在这种情况下为`54.196.174.210`：
 
 <img src=img/publicIP.png width=600>
 
-We have to wait until the status stops saying "Initializing", which could take several minutes.
+我们必须等到状态停止显示“正在初始化”，这可能需要几分钟。
 
-## Connecting to the remote server
+## 连接到远程服务器
 
-Click on the "Connect" button at the top of the page and it will bring up a dialog box that tells you how to connect to the server.  You want to connect with "A standalone SSH client" link (Java is now a security risk in the browser so we can't use that choice.)  Inside you will see the `ssh` command necessary to connect to your machine. If you have Windows, there is a link to show you how to use an SSH client called PuTTY. 
+单击页面顶部的“连接”按钮，将弹出一个对话框，告诉您如何连接到服务器。 您想要使用“独立 SSH 客户端”链接来连接（Java 现在是浏览器中的安全风险，因此我们无法使用该选项。）在内部您将看到连接到您的计算机所需的`ssh`命令。 如果您有 Windows，则会显示一个链接，向您展示如何使用名为 PuTTY 的 SSH 客户端。
 
 <img src=img/connect.png width=550>
 
- Before we can connect, we have to make sure that the security file is not visible to everyone on the computer (other users). Otherwise ssh will not let us connect because the security file is not secure:
+在我们连接之前，我们必须确保计算机上的每个人都看不到安全文件（其他用户）。 否则 ssh 将不允许我们连接，因为安全文件不安全：
 
-```bash@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+```bash
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
 @         WARNING: UNPROTECTED PRIVATE KEY FILE!          @
 @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
 Permissions 0644 for '/Users/parrt/Dropbox/licenses/parrt.pem' are too open.
@@ -61,7 +61,7 @@ bad permissions: ignore key: /Users/parrt/Dropbox/licenses/parrt.pem
 Permission denied (publickey).
 ```
 
-Whoa!  Do this:
+哇！执行这个：
 
 ```bash
 $ cd ~/Dropbox/licenses
@@ -69,35 +69,35 @@ $ ls -l parrt.pem
 -rw-r--r--@ 1 parrt  parrt  1696 Aug  4 15:15 /Users/parrt/Dropbox/licences/parrt.pem
 ```
 
-To fix the permissions, we can use whatever "show information about file" GUI your operating system has or, from the command line, do this:
+要修复权限，我们可以使用您的操作系统具有的 GUI 来“显示文件信息”，或者从命令行执行以下操作：
 
 ```bash
 $ cd ~/Dropbox/licenses
 $ chmod 400 parrt.pem
 ```
 
-which changes the permissions like this:
+它像这样改变了权限：
 
 ```bash
 $ ls -l parrt.pem
 -r--------@ 1 parrt  501  1696 Aug  1 12:12 /Users/parrt/Dropbox/licenses/parrt.pem
 ```
 
-Don't worry if you don't understand exactly what's going on there. It's basically saying that the file is only read-write for me, the current user, with no permissions to anybody else.
+如果您不明白究竟发生了什么，请不要担心。 它基本上是说，该文件仅仅对我，当前用户，来说可读可写，任何其他人没有权限。
 
-For mac and linux users, we will use the direct `ssh` command from the command line. It will be something like:
+对于 mac 和 linux 用户，我们将直接使用命令行中`ssh`命令。它将是这样的：
 
 ```bash
 ssh -i parrt.pem ec2-user@54.196.174.210
 ```
 
-Naturally, you will have to provide the full pathname to your *userid*.pem file. So I need to type:
+当然，您必须提供`userid.pem`文件的完整路径名。 所以我需要输入：
 
 ```bash
 ssh -i ~/Dropbox/licenses/parrt.pem ec2-user@54.196.174.210
 ```
 
-Try to connect again and it will now warn you that you have never connected to that machine before. Again, this is a security measure. You can simply say "yes" here.
+尝试再次连接，它现在会警告您之前从未连接过该机器。 同样，这是一项安全措施。 你可以在这里简单地说“是”。
 
 ```bash
 $ ssh -i parrt.pem ec2-user@54.196.174.210
@@ -117,27 +117,25 @@ Run "sudo yum update" to apply all updates.
 [ec2-user@ip-172-30-0-97 ~]$ 
 ```
 
-The `$` is your prompt just like you have on your local machine using the terminal / shell, but you are giving commands to a remote server not your local machine.
+`$`是你的提示符，就像你在本地机器上使用终端 /shell 一样，但是你给远程服务器而不是本地机器发出命令。
 
+## 多个 shell
 
-
-## Multiple shells
-
-You can either hit "command-T" from Terminal.app and get multiple tabs up, one for the remote host and one for local/laptop work:
+你可以从`Terminal.app`点击`command-T`并获得多个标签，一个用于远程主机，一个用于本地/笔记本电脑：
 
 <img src="img/tabs.png" width="500">
 
-Or just get two windows up using "command-N" from Terminal.app.
+或者在`Terminal.app`中使用`command-N`获取两个窗口。
 
 <img src="img/two-shells.png" width="500">
 
-Verify the remote computer is not your laptop by doing command `ls /` on both computers:
+通过在两台计算机上执行命令`ls /`，来验证远程计算机不是您的笔记本电脑：
 
 <img src="img/two-roots.png" width="500">
  
-## Uploading data or code
+## 上传数据或代码
 
-To get data up to the server, you can cut-and-paste if the file is small. For example,  cut-and-paste the following data into a file called `coffee` in your home directory on that remote computer. First copy this data from these notes:
+要将数据提供给服务器，如果文件很小，可以剪切和粘贴。 例如，将以下数据剪切并粘贴到该远程计算机上主目录中名为`coffee`的文件中。 首先从这些笔记中复制这些数据：
 
 ```bash
 3 parrt
@@ -145,13 +143,13 @@ To get data up to the server, you can cut-and-paste if the file is small. For ex
 8 tombu
 ```
 
-then launch the `nano` editor on the remote computer:
+然后在远程计算机上启动`nano`编辑器：
 
 ```bash
 [ec2-user@ip-172-30-0-97 ~]$ nano coffee
 ```
 
-Paste the data into that file and type control-X and then "Yes" to save the file. You should pop back to the prompt after exiting.
+将数据粘贴到该文件中并键入`control-X`，然后单击“是”以保存文件。 退出后应该返回到提示符。
 
 ```bash
 [ec2-user@ip-172-30-0-97 ~]$ cat coffee # print it back out
@@ -161,7 +159,7 @@ Paste the data into that file and type control-X and then "Yes" to save the file
 $ 
 ```
 
-For larger files, we need to use the secure copy `scp` command that has the same argument structure as secure shell `ssh`. Get another shell running on your laptop. Download data file [cheese_deaths.csv](https://raw.githubusercontent.com/parrt/msan501/master/projects/regression/data/cheese_deaths.csv) and store on your laptop in the directory where you are currently working on the laptop command line. Now, in a shell **on your laptop**, use the following command (that is similar to `ssh`) to copy it to the remote computer:
+对于较大的文件，我们需要使用安全 copy `scp`命令，与安全 shell `ssh`具有相同参数结构。在笔记本电脑上运行另一个 shell。 下载数据文件[`cheese_deaths.csv`](https://raw.githubusercontent.com/parrt/msan501/master/projects/regression/data/cheese_deaths.csv)，并存储在笔记本上，您当前正在处理笔记本命令行的目录中。现在，在笔记本电脑上的 shell 中，使用以下命令（类似于`ssh`）将其复制到远程计算机：
 
 ```bash
 $ scp -i ~/Dropbox/licenses/parrt.pem cheese_deaths.csv ec2-user@54.196.174.210:~ec2-user
@@ -169,11 +167,13 @@ cheese_deaths.csv                                100%  160     6.9KB/s   00:00
 $ 
 ```
 
-Do not forget the `~ec2-user` on the end of that line.  The general form of the command is:
+不要忘记该行末尾的`~ec2-user`。 该命令的一般形式是：
 
-scp -i *your-pem-file* *file-to-copy* *user*@*machine-name*:*directory-on-remote-machine*
+```bash
+scp -i your-pem-file file-to-copy user@machine-name:directory-on-remote-machine
+```
 
-From the shell that is connected to the remote server, ask for the directory listing and you will see the new file:
+从连接到远程服务器的 shell，请求目录列表，您将看到新文件：
 
 ```bash
 [ec2-user@ip-172-30-0-135 ~]$ ls
@@ -191,10 +191,10 @@ years,cheese,deaths
 2008,32.8,717
 ```
 
-To exit the remote server, type `exit` or use `^D` from the `$` prompt. The machine will still be running but you're no longer connected to it from your laptop.
+要退出远程服务器，请在`$`提示符下键入`exit`或使用`^ D`。 机器仍在运行，但您不再通过笔记本电脑连接它。
 
-Play around with your instance and then **TERMINATE YOUR INSTANCE WHEN YOU ARE DONE**, otherwise you will continue to get charged for the use of that machine. Right-click on the instance from your AWS console and select "instance state" then submenu "terminate". It will warn you that all of your local storage will go away. Hit the "yes, terminate" button. It should look like this when done:
+玩转你的实例，然后**当你完成时终止你的实例**，否则将继续向你收取使用该机器的费用。在 AWS 控制台上右键单击实例，然后选择“实例状态”，然后选择子菜单“终止”。 它会警告您所有本地存储都将消失。 点击“是，终止”按钮。 完成后应该如下所示：
 
 <img src=img/terminated.png width=450>
 
-If you say "stop" instead, it will stop the machine, but you still get charged. On the other hand, this is useful because you can restart that machine without having to go through this whole procedure. All of your data will be intact. If you say "Terminate", it will toss the machine out and you will have to go through this procedure again to get a new machine.
+如果你点击“停止”，它会停止机器，但仍然会向你收费。 另一方面，这很有用，因为您可以重新启动该计算机而无需执行整个过程。 您的所有数据都将完整无缺。 如果您点击“终止”，它将把机器丢弃，您将不得不再次执行此过程来获得新机器。
