--- a/docs/2.1_programming.md
+++ b/docs/2.1_programming.md
@@ -49,11 +49,11 @@
 
 程序是一系列操作，用于转换数据或执行计算，它最终产生预期输出。*编程*是设计程序的行为：识别操作及其适当的顺序。 换句话说，编程就是为计算机提出一个工作计划，我们经常用半精确的英文描述，叫做*伪代码*。这是上一节中的**第四步**。
 
-*Coding*, on the other hand, is the act of translating such high-level pseudocode to programming language syntax. As you gain more experience, it'll become easier and easier to go from a work plan in your head straight to code, without the pseudocode step.
+另一方面，*编码*是将这种高级伪代码转换为编程语言语法的行为。 随着您获得更多经验，在没有伪代码步骤的情况下，直接从工作计划变成代码变得更容易。
 
-When first learning to program, it helps to use established patterns, templates, strategies, and common data transformation operations as a crutch. For example, in the next section will look at a template for a data science program that will work in most cases throughout this program! In [programming patterns in Python](https://github.com/parrt/msan501/blob/master/notes/python-patterns.ipynb), we'll see lots of patterns you can piece together to create programs.
+在第一次学习编程时，将已建立的模式，模板，策略和常见的数据转换操作用作拐杖，是有帮助的。 例如，在下一节中将查看数据科学程序的模板，它们在整个程序中的大多数情况下都可以使用！ 在[ Python 中的编程模式](https://github.com/parrt/msan501/blob/master/notes/python-patterns.ipynb)中，我们将看到许多模式，您可以拼凑起来创建程序。
 
-As mentioned above, there are also two strategies or general guidelines you can use to approach the program design process:
+如上所述，您还可以使用两种策略或一般准则来处理程序设计过程：
 
 * *Start with the end result and work your way backwards, asking what the prerequisites are for each step*. In other words, the processing step or steps preceding step *i* compute the data or values needed by step *i*. For example, we cannot print the average of some numbers before we compute that average. We can't compute the average until we sum those numbers. We can't sum until we load those numbers into memory etc...
 * *Reduce or simplify a new problem to a variation of an existing problem with a known solution.* To apply this new approach, ask what the difference is between the problem you're trying to solve and other problems for which you have a solution.
