--- a/docs/4.3_gradient-descent.md
+++ b/docs/4.3_gradient-descent.md
@@ -1,18 +1,17 @@
 
-# Single-parameter gradient descent
+# 单变量梯度下降
 
-The goal of this lecture/lab is to solve a nontrivial iterative computation problem: *gradient-descent function minimization*. My hope is that you will see gradient descent as identical to the square root approximation, just with a different recurrence relation. The full [source code](https://github.com/parrt/msan501/blob/master/notes/code/descent.py) of this lesson is available.
+本讲座/实验的目标是解决一个重要的迭代计算问题：*梯度下降函数最小化*。 我希望你会看到梯度下降与平方根近似相同，只是具有不同的递归关系。 本课程的完整[源代码在这里](https://github.com/parrt/msan501/blob/master/notes/code/descent.py)。
 
-## Discussion
+## 讨论
 
-Finding $x$ that minimizes or "optimizes" function $f(x)$ (usually over some range) is an incredibly important operation as we can use it to minimize risk and, for machine learning, to learn the parameters of our classifiers or predictors. For example, deep learning uses cost function optimization to train neural networks. Generally $x$ will be a vector but we will assume $x$ is a scalar to learn the basics. If we know that the function is convex like a quadratic polynomial, there is a unique solution and we can simply set the derivative equal to zero and solve for $x$:
+找到最小化或“优化”函数`f(x)`（通常在某个范围内）的`x`是一项非常重要的操作，因为我们可以使用它来最小化风险，并且对于机器学习，可以学习我们的分类器或预测器的参数。 例如，深度学习使用成本函数优化来训练神经网络。 通常`x`将是一个向量，但我们假设`x`是一个标量来学习基础知识。 如果我们知道函数像二次多项式一样是凸的，那么有一个独特的解决方案，我们可以简单地将导数设置为零并求解`x`：
 
-\\[
+```
 f'(x) = 0
-\\]
+```
 
-That is basically asking the question, "Where does the function flatten out?"  For example, the function $f(x) = (x-2)^2 + 1$ has derivative $f'(x) = 2x - 4$ whose zero is $x=2$.
-
+这基本上是在问“这个函数在哪里变平？” 例如，函数`f(x) = (x-2)^2 + 1`的导数为`f'(x) = 2x - 4`，其零点为`x = 2`。
 
 ```python
 import matplotlib.pyplot as plt
@@ -26,10 +25,7 @@ plt.plot(graphx, graphy)
 plt.show()
 ```
 
-
 ![png](img/4.3_gradient-descent_3_0.png)
-
-
 
 ```python
 def foo(x): 
@@ -45,14 +41,6 @@ foo(2), foo(10)
 '''
 ```
 
-
-
-
-
-
-
-
-
 ```python
 X = np.array([1,2,3])
 foo(X)
@@ -64,11 +52,7 @@ array([2, 1, 2])
 '''
 ```
 
-
-
-
-We prefer to find the *global minimum* of $f(x)$ but generally have to be satisfied with a *local minimum*, which we hope is close to the global minimum. A decent approach to finding the global minimum is to find a number of local minima via random starting $x_0$ locations and just choose the $x$ of the smallest minimum $f(x)$ discovered. For example, the function $f(x) = cos(3\pi x) / x$ has two minima in $[0,1.3]$, with one obvious global minimum:
-
+我们更喜欢找到`f(x)`的*全局最小值*，但通常必须满足*局部最小值*，我们希望它接近全局最小值。 找到全局最小值的一个不错的方法是通过随机初始化`x0`的位置，找到一些局部最小值，然后选择所发现的`f(x)`最小的最小值的`x`。 例如，函数`f(x) = cos(3\pi x) / x`在`[0,1.3]`中有两个最小值，其中一个是明显的全局最小值：
 
 ```python
 def f(x): return np.cos(3 * np.pi * x) / x
@@ -83,45 +67,44 @@ plt.show()
 
 ![png](img/4.3_gradient-descent_7_0.png)
 
+如果函数有很多最小值/最大值或非常复杂，则可能没有简单的解析解。
 
-If the function has lots of minima/maxima or is very complicated, there may be no easy analytic solution.
-There are many approaches to finding function minima iteratively (i.e., non-analytically), but we will use a well-known technique called *gradient descent* or *method of steepest descent*.  
+有许多方法可以迭代地（即非解析地）找到函数最小值，但我们将使用一种众所周知的技术，称为*梯度下降*或*最速下降法*。
 
-### Gradient descent
+### 梯度下降
 
-Gradient descent requires a starting position, $x_0$, the function to optimize, $f(x)$, and its derivative $f'(x)$.  Recall that the derivative is just the slope of a function at a particular point. In other words, as $x$ shifts away from a specific position, does $f(x)$ go up or down, and by how much?  E.g., the derivative of $x^2$ is $2x$, which gives us a positive slope when $x>0$ and a negative slope when $x<0$.  Gradient descent uses the derivative to iteratively pick a new value of $x$ that gets us closer and closer to the minimum of $f(x)$.   The negative of the slope tells us the direction (in $x$ units) of the nearest minimum. For example, here is the cosine graph again, this time showing a number of vectors representing derivatives at particular points.
+梯度下降需要一个起始位置，`x0`，优化函数，`f(x)`及其导数`f'(x)`。 回想一下，导数只是特定点处函数的斜率。 换句话说，当`x`从特定位置移动时，`f(x)`是上涨还是下跌，以及涨多少？ 例如，`x ^ 2`的导数是`2x`，当`x > 0`时为正斜率，当`x < 0`时为负斜率。 梯度下降使用导数，迭代地选择`x`的新值，使我们越来越接近`f(x)`的最小值。 斜率的符号告诉我们最接近的最小值的方向（以`x`为单位）。 例如，这里再次是余弦图，这次显示了代表特定点的导数的多个向量。
 
 <img src="img/cos-2minima-edited.png" width="300">
 
-Note that the derivative is zero, i.e. flat, at the minima (same is true for maxima). Notice that the derivatives (red vectors) point in the opposite direction of the nearest minimum. If we want to move in the direction of the nearest minimum, we should adjust $x$ by adding the negative of the derivative; i.e., we should subtract the derivative from $x_i$ to get $x_{i+1}$.  The recurrence relation for updating our estimate of $x$ that minimizes $f(x)$ is then just:
+注意，导数在最小值处为零，即平坦（对于最大值也是如此）。 请注意，导数（红色向量）指向最接近的最小值的相反方向。 如果我们想要朝最近的最小值方向移动，我们应该通过加上导数的相反数来调整`x`; 也就是说，我们应该从`xi`中减去导数，得到`x_{i + 1}`。 更新我们对`x`的估计来最小化`f(x)`的递归关系就是：
 
-\\[
-x_{i+1} = x_i - \eta f'(x_i)
-\\]
+```
+x_{i+1} = xi - η f'(xi)
+```
 
-where $\eta$ is called the *learning rate*, which we'll discuss below. The $\eta f'(x_{i})$ term represents the size of the step we take towards the minimum. 
-The basic algorithm is:
+其中`η`被称为*学习率*，我们将在下面讨论。` η f'(xi)`一项表示我们采取的最小步骤的大小。
 
-<ol>
-    <li>Pick an initial $x_0$, let $x = x_0$
-    <li>Let $x_{i+1} = x_i - \eta f'(x_i)$ until $f'(x_i)=0$
-</ol>
+基本的算法为：
 
-That algorithm is extremely simple but knowing when to stop the algorithm is problematic when dealing with the finite precision of computers. Specifically, no two floating-point numbers are ever equal really. So $f'(x) = 0$ is always false. Usually we do something like
++   选取初始值`x0`，让`x = x0`
++   让`x_{i+1} = xi - η f'(x_i)` 直到`f'(x_i)=0`
 
-\\[
-abs(x_{i+1} - x_i) < precision
-\\]
+该算法非常简单，但在处理计算机的有限精度时，知道何时停止算法是个问题。 具体来说，没有两个浮点数真的相等。所以`f'(x) = 0`总是假的。通常我们会这样做：
 
-where precision is some very small number like 0.0000001.  We could also test 
+```
+abs(x_{i+1} - xi) < precision
+```
 
-\\[
-abs(f(x_{i+1}) - f(x_i)) < precision
-\\]
+精度是一些非常小的数字，如 0.0000001。 我们也可以测试一下
 
-to see if the function is flattening out or when there is a very small vertical change **and** $f(x_{i+1})$ is heading back up.  A third way is to test whether the derivative is close to zero. I tried all three and found that simply checking to see if $x_{i+1}$ has converged works the best (it, for example, allowed me to have a very high learning rate). The third method is problematic because we are using finite difference, which is a poor approximation to the true derivative.
+```
+abs(f(x_{i+1}) - f(xi)) < precision
+```
 
-The steps we take are scaled by the learning rate $\eta$.  Yaser S. Abu-Mostafa has some [great slides](http://www.amlbook.com/slides/iTunesU_Lecture09_May_01.pdf) and videos that you should check out. Here is his description on slide 21 of how the learning rate can affect convergence:
+看看函数是否变平或者是否有一个非常小的垂直变化，**和**`f(x_{i+1})`是否正在回升。第三种方法是测试导数是否接近于零。 我尝试了所有这三个，并发现只检查`x_ {i + 1}`是否收敛是最好的（例如，它允许我具有非常高的学习率）。 第三种方法是有问题的，因为我们使用有限差分，这是对真实导数的不良近似。
+
+我们采取的步骤按学习率`η`缩放。 Yaser S. Abu-Mostafa 有一些[很棒的幻灯片](http://www.amlbook.com/slides/iTunesU_Lecture09_May_01.pdf)和你应该看的视频。以下是他在幻灯片 21 中对学习率如何影响收敛的描述：
 
 <img src="img/stepsize.png" width="400">
 
